Fotos de testimonios
Cargando fotos de testimonios

--- a/drahanoi.html
+++ b/drahanoi.html
@@ -12,13 +12,13 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <link rel="icon" href="https://i.imgur.com/qZ5PgKF.png" type="image/png">
+    <link rel="icon" href="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/logo.png" type="image/png">
 
 </head>
 <body class="bg-gray-50"> <nav class="nav-container py-4 w-full fixed top-0 left-0 right-0 z-50 transition-all duration-300" id="navbar">
         <div class="container mx-auto flex items-center justify-between px-4">
             <div class="flex items-center">
-                <img src="https://i.imgur.com/qZ5PgKF.png" alt="Logo Dra. Hanoi" class="h-12 md:h-16 mr-3" onerror="this.src='https://placehold.co/64x64/d8bfd8/4b0082?text=Logo'; this.onerror=null;">
+                <img src="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/logo.png" alt="Logo Dra. Hanoi" class="h-12 md:h-16 mr-3" onerror="this.src='https://placehold.co/64x64/d8bfd8/4b0082?text=Logo'; this.onerror=null;">
                 <div>
                     <h1 class="text-lg md:text-xl font-semibold text-gray-800">Dra. Hanoi Yánez González</h1>
                     <p class="text-xs md:text-sm text-gray-600">Ginecóloga-Obstetra | Especialista Infanto-Juvenil</p>
@@ -42,7 +42,7 @@
     </nav>
 
     <div id="mobile-menu" class="fixed inset-0 bg-white z-[1000] flex flex-col items-center justify-center transition-transform duration-300 ease-in-out transform translate-x-full md:hidden">
-        <button id="close-menu" class="absolute top-5 right-5 text-3xl text-gray-700 hover:text-purple-600">&times;</button>
+        <button id="close-menu" class="absolute top-5 right-5 text-3xl text-gray-700 hover:text-purple-600">×</button>
         <div class="flex flex-col space-y-8 text-center">
             <a href="#servicios" class="mobile-nav-link text-xl text-gray-700 hover:text-purple-600">Servicios</a>
             <a href="#consultas" class="mobile-nav-link text-xl text-gray-700 hover:text-purple-600">Consultas</a>
@@ -75,8 +75,8 @@
             </div>
             <div class="md:w-1/2 flex justify-center">
                 <div class="relative w-full max-w-sm md:max-w-md">
-                     <img src="https://i.imgur.com/qZ5PgKF.png" alt="Logo Decorativo Dra. Hanoi" class="absolute -top-16 -left-8 md:-top-20 md:-left-10 w-24 md:w-32 float-animation z-10 opacity-80 rounded-full shadow-lg" onerror="this.style.display='none';">
-                    <img src="https://i.imgur.com/3VsBk1O.jpg" alt="Dra. Hanoi Yánez González - Ginecóloga Obstetra" class="doctor-image w-full rounded-3xl shadow-2xl z-0" onerror="this.src='https://placehold.co/400x450/d8bfd8/4b0082?text=Dra.+Hanoi'; this.onerror=null;">
+                     <img src="images/logo-flotante-hero.png" alt="Logo Decorativo Dra. Hanoi" class="absolute -top-16 -left-8 md:-top-20 md:-left-10 w-24 md:w-32 float-animation z-10 opacity-80 rounded-full shadow-lg" onerror="this.src='https://placehold.co/128x128/ffffff/cccccc?text=o'; this.style.opacity=0.5; this.onerror=null;">
+                    <img src="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/main-profile.png" alt="Dra. Hanoi Yánez González - Foto Principal" class="doctor-image w-full rounded-3xl shadow-2xl z-0" onerror="this.src='https://placehold.co/400x450/d8bfd8/4b0082?text=Dra.+Hanoi'; this.onerror=null;">
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/2">
-                    <img src="https://i.imgur.com/Vl3KNcV.jpg" alt="Dra. Hanoi Yánez González en consulta" class="doctor-image w-full max-w-md mx-auto rounded-3xl" onerror="this.src='https://placehold.co/400x450/98fb98/006400?text=Dra.+Hanoi+2'; this.onerror=null;">
+                     <img src="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/4.png" alt="Dra. Hanoi Yánez González en consulta" class="doctor-image w-full max-w-md mx-auto rounded-3xl" onerror="this.src='https://placehold.co/400x450/98fb98/006400?text=Dra.+Hanoi+Consulta'; this.onerror=null;">
                 </div>
                 <div class="md:w-1/2">
                     <h2 class="text-3xl md:text-4xl font-bold mb-6 gradient-text">Sobre mí</h2>
@@ -346,12 +346,12 @@
             </div>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-                <img src="https://i.imgur.com/3VsBk1O.jpg" alt="Galería Imagen 1 - Dra. Hanoi Yánez" class="gallery-image" onerror="this.src='https://placehold.co/600x400/e2e8f0/4a5568?text=Imagen+1'; this.onerror=null;">
-                <img src="https://i.imgur.com/rKaTXaH.jpg" alt="Galería Imagen 2 - Consulta" class="gallery-image" onerror="this.src='https://placehold.co/600x400/e2e8f0/4a5568?text=Imagen+2'; this.onerror=null;">
-                <img src="https://i.imgur.com/Vl3KNcV.jpg" alt="Galería Imagen 3 - Dra. Hanoi Yánez" class="gallery-image" onerror="this.src='https://placehold.co/600x400/e2e8f0/4a5568?text=Imagen+3'; this.onerror=null;">
-                <img src="https://i.imgur.com/bZiLzKh.jpg" alt="Galería Imagen 4 - Equipo Médico" class="gallery-image" onerror="this.src='https://placehold.co/600x400/e2e8f0/4a5568?text=Imagen+4'; this.onerror=null;">
-                <img src="https://i.imgur.com/3A4oT2N.jpg" alt="Galería Imagen 5 - Detalle Consulta" class="gallery-image" onerror="this.src='https://placehold.co/600x400/e2e8f0/4a5568?text=Imagen+5'; this.onerror=null;">
-                <img src="https://i.imgur.com/01Wd7TQ.jpg" alt="Galería Imagen 6 - Dra. Hanoi Yánez Sonriendo" class="gallery-image" onerror="this.src='https://placehold.co/600x400/e2e8f0/4a5568?text=Imagen+6'; this.onerror=null;">
+                <img src="images/galeria-01.jpg" alt="Galería Imagen 1" class="gallery-image" onerror="this.src='https://placehold.co/600x400/e2e8f0/4a5568?text=Imagen+Galer%C3%ADa+1'; this.onerror=null;">
+                <img src="images/galeria-02.jpg" alt="Galería Imagen 2" class="gallery-image" onerror="this.src='https://placehold.co/600x400/e2e8f0/4a5568?text=Imagen+Galer%C3%ADa+2'; this.onerror=null;">
+                <img src="images/galeria-03.jpg" alt="Galería Imagen 3" class="gallery-image" onerror="this.src='https://placehold.co/600x400/e2e8f0/4a5568?text=Imagen+Galer%C3%ADa+3'; this.onerror=null;">
+                <img src="images/galeria-04.jpg" alt="Galería Imagen 4" class="gallery-image" onerror="this.src='https://placehold.co/600x400/e2e8f0/4a5568?text=Imagen+Galer%C3%ADa+4'; this.onerror=null;">
+                <img src="images/galeria-05.jpg" alt="Galería Imagen 5" class="gallery-image" onerror="this.src='https://placehold.co/600x400/e2e8f0/4a5568?text=Imagen+Galer%C3%ADa+5'; this.onerror=null;">
+                <img src="images/galeria-06.jpg" alt="Galería Imagen 6" class="gallery-image" onerror="this.src='https://placehold.co/600x400/e2e8f0/4a5568?text=Imagen+Galer%C3%ADa+6'; this.onerror=null;">
             </div>
         </div>
     </section>
@@ -581,7 +581,7 @@
                              style="border:0;"
                              loading="lazy">
                      </a>
-                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -590,7 +590,7 @@
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row md:justify-between items-center text-center md:text-left">
                 <div class="mb-8 md:mb-0 flex flex-col md:flex-row items-center">
-                    <img src="https://i.imgur.com/qZ5PgKF.png" alt="Logo Dra. Hanoi Footer" class="h-16 mb-4 md:mb-0 md:mr-4" onerror="this.style.display='none';">
+                     <img src="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/logo.png" alt="Logo Dra. Hanoi Footer" class="h-16 mb-4 md:mb-0 md:mr-4" onerror="this.src='https://placehold.co/64x64/ffffff/cccccc?text=Logo'; this.style.opacity=0.7; this.onerror=null;">
                     <div>
                         <h3 class="text-xl font-bold">Dra. Hanoi Yánez González</h3>
                         <p class="text-white text-opacity-80">Ginecóloga-Obstetra | Especialista Infanto-Juvenil</p>
@@ -634,6 +634,6 @@
     </button>
 
 
-    <script src="script.js"></script>
+    <script src="drahanoi.js"></script>
 </body>
 </html>
