--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="hidden md:flex items-center space-x-6 lg:space-x-8">
-                <a href="#servicios" class="nav-link smooth-scroll-link text-gray-700 hover:text-purple-600">Servicios</a>
+                <a href="#sobre-mi" class="nav-link smooth-scroll-link text-gray-700 hover:text-purple-600">Sobre mí</a> <a href="#servicios" class="nav-link smooth-scroll-link text-gray-700 hover:text-purple-600">Servicios</a>
                 <a href="#consultas" class="nav-link smooth-scroll-link text-gray-700 hover:text-purple-600">Consultas</a>
                 <a href="#testimonios" class="nav-link smooth-scroll-link text-gray-700 hover:text-purple-600">Testimonios</a>
                 <a href="#faq" class="nav-link smooth-scroll-link text-gray-700 hover:text-purple-600">FAQ</a>
@@ -45,10 +45,11 @@
     <div id="mobile-menu" class="fixed inset-0 bg-white z-[1000] flex flex-col items-center justify-center transition-transform duration-300 ease-in-out transform translate-x-full md:hidden">
         <button id="close-menu" class="absolute top-5 right-5 text-3xl text-gray-700 hover:text-purple-600">×</button>
         <div class="flex flex-col space-y-8 text-center">
-             <a href="#servicios" class="mobile-nav-link smooth-scroll-link text-xl text-gray-700 hover:text-purple-600">Servicios</a>
+             <a href="#sobre-mi" class="mobile-nav-link smooth-scroll-link text-xl text-gray-700 hover:text-purple-600">Sobre mí</a>
+            <a href="#servicios" class="mobile-nav-link smooth-scroll-link text-xl text-gray-700 hover:text-purple-600">Servicios</a>
             <a href="#consultas" class="mobile-nav-link smooth-scroll-link text-xl text-gray-700 hover:text-purple-600">Consultas</a>
             <a href="#testimonios" class="mobile-nav-link smooth-scroll-link text-xl text-gray-700 hover:text-purple-600">Testimonios</a>
-             <a href="#faq" class="mobile-nav-link smooth-scroll-link text-xl text-gray-700 hover:text-purple-600">FAQ</a>
+            <a href="#faq" class="mobile-nav-link smooth-scroll-link text-xl text-gray-700 hover:text-purple-600">FAQ</a>
             <a href="#contacto" class="mobile-nav-link smooth-scroll-link text-xl text-gray-700 hover:text-purple-600">Contacto</a>
             <a href="https://wa.me/584140875986" target="_blank" rel="noopener noreferrer" class="btn-primary inline-block mx-auto mt-4">
                 <i class="fab fa-whatsapp mr-2"></i> Agendar Cita
@@ -76,7 +77,7 @@
             </div>
             <div class="md:w-1/2 flex justify-center">
                 <div class="relative w-full max-w-sm md:max-w-md">
-                     <img src="images/logo-flotante-hero.png" alt="Logo Decorativo Dra. Hanoi" class="absolute -top-16 -left-8 md:-top-20 md:-left-10 w-24 md:w-32 float-animation z-10 opacity-80 rounded-full shadow-lg" onerror="this.src='https://placehold.co/128x128/ffffff/cccccc?text=o'; this.style.opacity=0.5; this.onerror=null;">
+                     <img src="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/logo.png" alt="Logo Decorativo Dra. Hanoi" class="absolute -top-16 -left-8 md:-top-20 md:-left-10 w-24 md:w-32 float-animation z-10 opacity-80 rounded-full shadow-lg" onerror="this.src='https://placehold.co/128x128/ffffff/cccccc?text=o'; this.style.opacity=0.5; this.onerror=null;">
                     <img src="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/main-profile.png" alt="Dra. Hanoi Yánez González - Foto Principal" class="doctor-image w-full rounded-3xl shadow-2xl z-0" onerror="this.src='https://placehold.co/400x450/d8bfd8/4b0082?text=Dra.+Hanoi'; this.onerror=null;">
                 </div>
             </div>
@@ -611,7 +612,7 @@
                 </div>
 
                 <div class="flex flex-wrap justify-center gap-x-6 gap-y-2 mb-8 md:mb-0">
-                    <a href="#servicios" class="footer-link smooth-scroll-link">Servicios</a>
+                    <a href="#sobre-mi" class="footer-link smooth-scroll-link">Sobre mí</a> <a href="#servicios" class="footer-link smooth-scroll-link">Servicios</a>
                     <a href="#consultas" class="footer-link smooth-scroll-link">Consultas</a>
                     <a href="#testimonios" class="footer-link smooth-scroll-link">Testimonios</a>
                      <a href="#faq" class="footer-link smooth-scroll-link">FAQ</a>
@@ -648,6 +649,5 @@
     </button>
 
 
-    <script src="drahanoi.js"></script>
-</body>
+    <script src="script.js"></script> </body>
 </html>
