--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
             </div>
             <div class="md:w-1/2 flex justify-center">
                 <div class="relative w-full max-w-sm md:max-w-md">
-                     <img src="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/logo.png" alt="Logo Decorativo Dra. Hanoi" class="absolute -top-10 -left-8 md:-top-14 md:-left-10 w-24 md:w-32 float-animation z-10 opacity-80 rounded-full shadow-lg" onerror="this.src='https://placehold.co/128x128/ffffff/cccccc?text=o'; this.style.opacity=0.5; this.onerror=null;">
-                    <img src="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/main-profile.jpg" alt="Dra. Hanoi Yánez González - Foto Principal" class="doctor-image w-full rounded-3xl shadow-2xl z-0" onerror="this.src='https://placehold.co/400x450/d8bfd8/4b0082?text=Dra.+Hanoi'; this.onerror=null;">
+                     <img src="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/main-profile.jpg" alt="Dra. Hanoi Yánez González - Foto Principal" class="doctor-image w-full rounded-3xl shadow-2xl z-0" onerror="this.src='https://placehold.co/400x450/d8bfd8/4b0082?text=Dra.+Hanoi'; this.onerror=null;">
                 </div>
             </div>
         </div>
@@ -641,7 +640,7 @@
 </html>
 ```
 
-**2. Archivo CSS (`style.css`):** (Re-añadida transición para FAQ)
+Most up-to-date Immersive Artifact for "dra_hanoi_website_css" is:
 
 ```css
 /* style.css */
@@ -1329,7 +1328,7 @@ textarea.form-input:focus {
 }
 ```
 
-**3. Archivo JavaScript (`script.js`):** (Revertido FAQ a `max-height`, corregido menú móvil)
+Most up-to-date Immersive Artifact for "dra_hanoi_website_js_renamed" is:
 
 ```javascript
 // script.js
@@ -1600,7 +1599,7 @@ document.addEventListener('DOMContentLoaded', () => {
     sections.forEach(section => {
         section.classList.add('fade-in'); // Add class to trigger observer
     });
-     // Apply fade-in to FAQ separately if desired, maybe with a delay?
+     // Apply fade-in to FAQ separately if desired, maybe with a slight delay?
      const faqSection = document.getElementById('faq');
      if (faqSection) {
          faqSection.classList.add('fade-in');
