--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="#testimonios" class="nav-link smooth-scroll-link text-gray-700 hover:text-purple-600">Testimonios</a>
                 <a href="#faq" class="nav-link smooth-scroll-link text-gray-700 hover:text-purple-600">FAQ</a>
                 <a href="#contacto" class="nav-link smooth-scroll-link text-gray-700 hover:text-purple-600">Contacto</a>
-                <a href="https://wa.me/584140875986" target="_blank" rel="noopener noreferrer" class="btn-primary">
+                <a href="https://wa.me/584140875986" target="_blank" rel="noopener noreferrer" class="btn-primary cta-pulse">
                     <i class="fab fa-whatsapp mr-2"></i> Agendar Cita
                 </a>
             </div>
@@ -56,14 +56,13 @@
              <a href="#testimonios" class="mobile-nav-link smooth-scroll-link text-xl text-gray-700 hover:text-purple-600">Testimonios</a>
               <a href="#faq" class="mobile-nav-link smooth-scroll-link text-xl text-gray-700 hover:text-purple-600">FAQ</a>
              <a href="#contacto" class="mobile-nav-link smooth-scroll-link text-xl text-gray-700 hover:text-purple-600">Contacto</a>
-             <a href="https://wa.me/584140875986" target="_blank" rel="noopener noreferrer" class="btn-primary inline-block mx-auto mt-4">
+             <a href="https://wa.me/584140875986" target="_blank" rel="noopener noreferrer" class="btn-primary cta-pulse inline-block mx-auto mt-4">
                  <i class="fab fa-whatsapp mr-2"></i> Agendar Cita
              </a>
         </div>
     </div>
 
-    <section class="pt-32 pb-20 md:pt-40 md:pb-24 px-4 hero-gradient-bg">
-        <div class="container mx-auto flex flex-col md:flex-row items-center justify-between gap-12">
+    <section class="pt-32 pb-20 md:pt-40 md:pb-24 px-4 hero-gradient-bg" id="hero-section"> <div class="container mx-auto flex flex-col md:flex-row items-center justify-between gap-12">
             <div class="md:w-1/2 text-center md:text-left">
                 <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6">
                     <span class="gradient-text">Tu bienestar</span> es mi prioridad
@@ -72,7 +71,7 @@
                     Atención ginecológica integral con un enfoque holístico en todas las etapas de la vida de la mujer. Única especialista en atención infanto-juvenil en Isla Margarita.
                 </p>
                 <div class="flex flex-wrap gap-4 justify-center md:justify-start">
-                    <a href="#consultas" class="btn-primary smooth-scroll-link inline-flex items-center justify-center">
+                    <a href="#consultas" class="btn-primary cta-pulse smooth-scroll-link inline-flex items-center justify-center">
                         Conoce los Servicios
                     </a>
                     <a href="https://wa.me/584140875986" target="_blank" rel="noopener noreferrer" class="btn-secondary">
@@ -486,7 +485,8 @@
                             <h4 class="info-title"><i class="fas fa-map-marker-alt info-icon"></i>Ubicación</h4>
                             <p class="info-text">
                                 Centro Médico El Valle, Planta Baja, Consultorio 5<br>
-                                Av. Rafael Tovar, El Valle Del Espíritu Santo<br>
+                                Av. Rafael Tovar,<br>
+                                El Valle Del Espíritu Santo,<br>
                                 Nueva Esparta, Venezuela 6308
                             </p>
                         </div>
