Varios cambios finales

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
             <div class="md:w-1/2 flex justify-center">
                 <div class="relative w-full max-w-sm md:max-w-md">
-                     <img src="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/main-profile.jpg" alt="Dra. Hanoi Yánez González - Foto Principal" class="doctor-image w-full rounded-3xl shadow-2xl z-0" onerror="this.src='https://placehold.co/400x450/d8bfd8/4b0082?text=Dra.+Hanoi'; this.onerror=null;">
+                     <img src="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/5.png" alt="Foto de Dra. Hanoi Yánez González 5" class="doctor-image w-full rounded-3xl shadow-2xl z-0" onerror="this.src='https://placehold.co/400x450/d8bfd8/4b0082?text=Dra.+Hanoi+5'; this.onerror=null;">
                 </div>
             </div>
         </div>
@@ -92,7 +92,7 @@
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/2">
-                     <img src="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/4.png" alt="Dra. Hanoi Yánez González en consulta" class="doctor-image w-full max-w-md mx-auto rounded-3xl" onerror="this.src='https://placehold.co/400x450/98fb98/006400?text=Dra.+Hanoi+Consulta'; this.onerror=null;">
+                     <img src="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/main-profile.jpg" alt="Dra. Hanoi Yánez González - Foto Principal" class="doctor-image w-full max-w-md mx-auto rounded-3xl" onerror="this.src='https://placehold.co/400x450/d8bfd8/4b0082?text=Dra.+Hanoi'; this.onerror=null;">
                 </div>
                 <div class="md:w-1/2">
                     <h2 class="text-3xl md:text-4xl font-bold mb-6 gradient-text">Sobre mí</h2>
@@ -448,7 +448,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="faq-item border rounded-lg overflow-hidden">
+                 <div class="faq-item border rounded-lg overflow-hidden">
                     <button class="faq-question w-full flex justify-between items-center text-left p-5 bg-purple-50 hover:bg-purple-100 transition">
                         <span class="font-semibold text-lg text-purple-800">¿Qué métodos de pago aceptan?</span>
                         <i class="fas fa-chevron-down transition-transform duration-300"></i>
