--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
                     <span class="gradient-text">Tu bienestar</span> es mi prioridad
                 </h1>
                 <p class="text-lg mb-8 text-gray-700 max-w-xl mx-auto md:mx-0">
-                    Atención ginecológica integral con un enfoque holístico en todas las etapas de la vida de la mujer. Única especialista en atención infanto-juvenil en Isla Margarita.
-                </p>
+                    Atención ginecológica integral con un enfoque holístico en todas las etapas de la vida de la mujer. Única especialista en atención infanto-juvenil en <span class="font-semibold">la</span> Isla de Margarita. </p>
                 <div class="flex flex-wrap gap-4 justify-center md:justify-start">
                     <a href="#consultas" class="btn-primary cta-pulse smooth-scroll-link inline-flex items-center justify-center">
                         Conoce los Servicios
@@ -97,13 +96,13 @@
                 <div class="md:w-1/2">
                     <h2 class="text-3xl md:text-4xl font-bold mb-6 gradient-text">Sobre mí</h2>
                     <p class="mb-4 text-lg text-gray-700">
-                        Soy Hanoi Yánez González, médico especialista en Obstetricia y Ginecología, egresada de la Universidad Central de Venezuela (UCV) y con diplomado en Ginecología Infanto-Juvenil.
+                        Soy Hanoi Yánez González, médico especialista en Obstetricia y Ginecología, egresada de la Universidad Central de Venezuela (UCV) y con diplomado en Ginecología Infanto-Juvenil, lo que me permite ofrecer una atención personalizada, incluso desde las etapas más tempranas.
                     </p>
                     <p class="mb-4 text-lg text-gray-700">
-                        Como venezolana y amante del yoga, mi enfoque médico es holístico, centrado en el bienestar integral de mis pacientes. Mi filosofía se basa en entender que cada mujer es única y merece una atención personalizada.
+                        Mi enfoque médico es holístico, centrado en el bienestar integral de mis pacientes. Esta perspectiva se nutre de mi interés en prácticas que promueven el equilibrio mente-cuerpo, como el yoga, y mi compromiso como médico venezolana. Mi filosofía se basa en entender que cada mujer es única y merece un cuidado adaptado a sus necesidades.
                     </p>
                     <p class="mb-6 text-lg text-gray-700">
-                        Mi consulta ofrece atención personalizada y aborda aspectos ginecológicos, reproductivos, nutricionales, emocionales y afectivos. Mi objetivo es educar sobre promoción de salud y prevención de enfermedades, acompañando en el proceso de embarazo y en la búsqueda de un estilo de vida saludable.
+                        En mi consulta, este enfoque individualizado abarca aspectos ginecológicos, reproductivos, nutricionales, emocionales y afectivos. Mi objetivo es educar sobre promoción de salud y prevención de enfermedades, fomentando la autogestión del bienestar como parte clave de esta visión integral. Además, te acompaño en etapas clave como el embarazo y en la búsqueda de un estilo de vida que promueva un bienestar integral y duradero.
                     </p>
                     <div class="flex flex-wrap gap-4 mt-8">
                         <div class="badge">
@@ -133,9 +132,9 @@
     <section id="servicios" class="py-20 section-gradient-2">
         <div class="container mx-auto px-4">
             <div class="text-center mb-16">
-                <h2 class="text-3xl md:text-4xl font-bold mb-4 gradient-text">Nuestros Servicios</h2>
+                <h2 class="text-3xl md:text-4xl font-bold mb-4 gradient-text">Servicios</h2>
                 <p class="text-xl text-gray-600 max-w-3xl mx-auto">
-                    Brindamos atención integral para todas tus necesidades ginecológicas y obstétricas
+                    Brindo atención integral para todas tus necesidades ginecológicas y obstétricas
                 </p>
             </div>
 
@@ -181,7 +180,7 @@
                     </div>
                     <h3 class="text-xl font-bold mb-4">Ginecología Infanto-Juvenil</h3>
                     <p class="text-gray-600 mb-4">
-                        Como única especialista en atención infanto-juvenil en Isla Margarita, ofrezco atención especializada para niñas y adolescentes en un ambiente de confianza y seguridad.
+                        Como única especialista en atención infanto-juvenil en la Isla de Margarita, ofrezco atención especializada para niñas y adolescentes en un ambiente de confianza y seguridad.
                     </p>
                      <a href="#contacto" class="service-link smooth-scroll-link"> <span>Saber más</span>
                         <i class="fas fa-arrow-right ml-2"></i>
@@ -245,7 +244,7 @@
                 </div>
                 <div class="card bg-white p-8 consultation-card hover-lift flex flex-col recommended-card">
                     <div class="recommended-badge">
-                        Recomendado
+                        Nuevo
                     </div>
                     <div class="flex justify-center mb-6">
                         <i class="fas fa-laptop-medical consultation-icon"></i>
@@ -410,7 +409,7 @@
             <div class="text-center mb-16">
                 <h2 class="text-3xl md:text-4xl font-bold mb-4 gradient-text">Preguntas Frecuentes</h2>
                 <p class="text-xl text-gray-600 max-w-3xl mx-auto">
-                    Respuestas a algunas de las dudas más comunes de nuestros pacientes.
+                    Respuestas a algunas de las dudas más comunes de mis pacientes.
                 </p>
             </div>
 
@@ -448,7 +447,7 @@
                         </p>
                     </div>
                 </div>
-                 <div class="faq-item border rounded-lg overflow-hidden">
+                <div class="faq-item border rounded-lg overflow-hidden">
                     <button class="faq-question w-full flex justify-between items-center text-left p-5 bg-purple-50 hover:bg-purple-100 transition">
                         <span class="font-semibold text-lg text-purple-800">¿Qué métodos de pago aceptan?</span>
                         <i class="fas fa-chevron-down transition-transform duration-300"></i>
