--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Dra. Hanoi Yánez González | Ginecóloga-Obstetra Especialista Infanto-Juvenil</title>
     <meta name="description" content="Dra. Hanoi Yánez González, médico especialista en Ginecología y Obstetricia con diplomado en atención infanto-juvenil. Ofrece servicios de consulta presencial en el Centro Médico El Valle, Isla Margarita, así como consultas en línea y a domicilio.">
 
+    <meta property="og:title" content="Dra. Hanoi Yánez González | Ginecóloga-Obstetra Especialista Infanto-Juvenil" />
+    <meta property="og:description" content="Atención ginecológica integral y especializada en la Isla de Margarita. Consulta presencial, online y a domicilio." />
+    <meta property="og:image" content="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/logo.png" />
+    <meta property="og:url" content="https://elsantin.github.io/dra.hanoi.online/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_VE" /> <meta name="twitter:card" content="summary" /> <meta name="twitter:title" content="Dra. Hanoi Yánez González | Ginecóloga-Obstetra Especialista Infanto-Juvenil" />
+    <meta name="twitter:description" content="Atención ginecológica integral y especializada en la Isla de Margarita. Consulta presencial, online y a domicilio." />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/logo.png" />
+    <meta name="twitter:url" content="https://elsantin.github.io/dra.hanoi.online/" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
