--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <section class="pt-32 pb-20 md:pt-40 md:pb-24 px-4 hero-gradient-bg">
         <div class="container mx-auto flex flex-col md:flex-row items-center justify-between gap-12">
             <div class="md:w-1/2 text-center md:text-left">
-                <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6">
-                    <span class="gradient-text">Tu bienestar</span> es mi prioridad
+                 <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6">
+                    <span class="gradient-text">Tu bienestar</span> es mi prioridad!
                 </h1>
                 <p class="text-lg mb-8 text-gray-700 max-w-xl mx-auto md:mx-0">
                     Atención ginecológica integral con un enfoque holístico en todas las etapas de la vida de la mujer. Única especialista en atención infanto-juvenil en la Isla de Margarita.
@@ -87,7 +87,7 @@
     <section id="sobre-mi" class="py-20 section-gradient-1"> <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/2">
-                     <img src="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/4.png" alt="Dra. Hanoi Yánez González en consulta" class="doctor-image w-full max-w-md mx-auto rounded-3xl" onerror="this.src='https://placehold.co/400x450/98fb98/006400?text=Dra.+Hanoi+Consulta'; this.onerror=null;">
+                     <img src="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/5.png" alt="Dra. Hanoi Yánez González en consulta" class="doctor-image w-full max-w-md mx-auto rounded-3xl" onerror="this.src='https://placehold.co/400x450/98fb98/006400?text=Dra.+Hanoi+Consulta'; this.onerror=null;">
                 </div>
                 <div class="md:w-1/2">
                     <h2 class="text-3xl md:text-4xl font-bold mb-6 gradient-text">Sobre mí</h2>
@@ -296,7 +296,7 @@
                             <i class="far fa-clock info-icon"></i>
                             Horario de Consultas
                         </h4>
-                        <ul class="info-list">
+                        <ul class="info-list space-y-3">
                              <li><span>Lunes a Viernes:</span> <span class="font-medium">9:00 am - 6:00 pm</span></li>
                             <li class="text-gray-500"><span>Excepto Miércoles tarde:</span> <span>No disponible</span></li>
                             <li class="text-gray-500"><span>Sábados y Domingos:</span> <span>No disponible</span></li>
@@ -310,7 +310,7 @@
                             <i class="fas fa-credit-card info-icon"></i>
                             Métodos de Pago Aceptados
                         </h4>
-                        <ul class="info-list">
+                        <ul class="info-list space-y-3">
                              <li class="flex items-center"><i class="fas fa-money-bill-1-wave text-green-600 mr-2 w-5 text-center"></i><span>Efectivo (USD/EUR)</span></li>
                              <li class="flex items-center"><i class="fas fa-mobile-screen-button text-blue-600 mr-2 w-5 text-center"></i><span>Transferencias / Pago Móvil (Bs.)</span></li>
                              <li class="flex items-center"><i class="fab fa-paypal text-blue-800 mr-2 w-5 text-center"></i><span>PayPal</span></li>
