--- a/index.html
+++ b/index.html
@@ -135,79 +135,73 @@
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <div class="card bg-white p-8 hover-lift">
-                    <div class="service-icon-wrapper">
-                        <i class="fas fa-venus service-icon"></i>
+                <div class="card bg-white p-8 hover-lift text-center sm:text-left">
+                    <div class="service-icon-wrapper mx-auto sm:mx-0"> <i class="fas fa-venus service-icon"></i>
                     </div>
                     <h3 class="text-xl font-bold mb-4">Salud sexual y reproductiva</h3>
                     <p class="text-gray-600 mb-4">
                         Identificación temprana de VPH y lesiones pre-invasivas del cáncer de cuello de útero, estudio de pareja infértil, asesoramiento y selección de métodos anticonceptivos ideales para ti.
                     </p>
-                    <a href="#contacto" class="service-link smooth-scroll-link"> <span>Saber más</span>
+                    <a href="#contacto" class="service-link smooth-scroll-link inline-block"> <span>Saber más</span>
                         <i class="fas fa-arrow-right ml-2"></i>
                     </a>
                 </div>
 
-                <div class="card bg-white p-8 hover-lift">
-                    <div class="service-icon-wrapper">
-                        <i class="fas fa-baby service-icon"></i>
+                <div class="card bg-white p-8 hover-lift text-center sm:text-left">
+                    <div class="service-icon-wrapper mx-auto sm:mx-0"> <i class="fas fa-baby service-icon"></i>
                     </div>
                     <h3 class="text-xl font-bold mb-4">Atención durante el embarazo</h3>
                     <p class="text-gray-600 mb-4">
                         Atención prenatal de calidad con un enfoque humano. Mi objetivo es asegurarme de que cada paciente se sienta cómoda y segura durante todo el proceso del embarazo y el parto.
                     </p>
-                     <a href="#contacto" class="service-link smooth-scroll-link"> <span>Saber más</span>
+                     <a href="#contacto" class="service-link smooth-scroll-link inline-block"> <span>Saber más</span>
                         <i class="fas fa-arrow-right ml-2"></i>
                     </a>
                 </div>
 
-                 <div class="card bg-white p-8 hover-lift">
-                    <div class="service-icon-wrapper">
-                         <i class="fas fa-heart-pulse service-icon"></i> </div>
+                 <div class="card bg-white p-8 hover-lift text-center sm:text-left">
+                    <div class="service-icon-wrapper mx-auto sm:mx-0"> <i class="fas fa-heart-pulse service-icon"></i> </div>
                     <h3 class="text-xl font-bold mb-4">Operaciones ginecológicas</h3>
                     <p class="text-gray-600 mb-4">
                         Realizo operaciones ginecológicas como miomectomías, histerectomías y curas de prolapsos con cuidado y profesionalismo para garantizar tu seguridad y bienestar.
                     </p>
-                     <a href="#contacto" class="service-link smooth-scroll-link"> <span>Saber más</span>
+                     <a href="#contacto" class="service-link smooth-scroll-link inline-block"> <span>Saber más</span>
                         <i class="fas fa-arrow-right ml-2"></i>
                     </a>
                 </div>
 
-                 <div class="card bg-white p-8 hover-lift">
-                    <div class="service-icon-wrapper">
-                        <i class="fas fa-child service-icon"></i>
+                 <div class="card bg-white p-8 hover-lift text-center sm:text-left">
+                    <div class="service-icon-wrapper mx-auto sm:mx-0"> <i class="fas fa-child service-icon"></i>
                     </div>
                     <h3 class="text-xl font-bold mb-4">Ginecología Infanto-Juvenil</h3>
                     <p class="text-gray-600 mb-4">
                         Como única especialista en atención infanto-juvenil en Isla Margarita, ofrezco atención especializada para niñas y adolescentes en un ambiente de confianza y seguridad.
                     </p>
-                     <a href="#contacto" class="service-link smooth-scroll-link"> <span>Saber más</span>
+                     <a href="#contacto" class="service-link smooth-scroll-link inline-block"> <span>Saber más</span>
                         <i class="fas fa-arrow-right ml-2"></i>
                     </a>
                 </div>
 
-                 <div class="card bg-white p-8 hover-lift">
-                    <div class="service-icon-wrapper">
-                        <i class="fas fa-stethoscope service-icon"></i>
+                 <div class="card bg-white p-8 hover-lift text-center sm:text-left">
+                    <div class="service-icon-wrapper mx-auto sm:mx-0"> <i class="fas fa-stethoscope service-icon"></i>
                     </div>
                     <h3 class="text-xl font-bold mb-4">Consulta ginecológica integral</h3>
                     <p class="text-gray-600 mb-4">
                         Abordaje completo de la salud femenina, incluyendo chequeos preventivos, tratamiento de infecciones, trastornos menstruales y orientación sobre la etapa menopáusica.
                     </p>
-                    <a href="#contacto" class="service-link smooth-scroll-link"> <span>Saber más</span>
+                    <a href="#contacto" class="service-link smooth-scroll-link inline-block"> <span>Saber más</span>
                         <i class="fas fa-arrow-right ml-2"></i>
                     </a>
                 </div>
 
-                 <div class="card bg-white p-8 hover-lift">
-                    <div class="service-icon-wrapper">
-                        <i class="fas fa-spa service-icon"></i>
+                 <div class="card bg-white p-8 hover-lift text-center sm:text-left">
+                    <div class="service-icon-wrapper mx-auto sm:mx-0"> <i class="fas fa-spa service-icon"></i>
                     </div>
                     <h3 class="text-xl font-bold mb-4">Bienestar integral</h3>
                     <p class="text-gray-600 mb-4">
                         Orientación nutricional, emocional y física para alcanzar un equilibrio completo en tu salud, promoviendo hábitos saludables y prácticas de autocuidado.
                     </p>
-                     <a href="#contacto" class="service-link smooth-scroll-link"> <span>Saber más</span>
+                     <a href="#contacto" class="service-link smooth-scroll-link inline-block"> <span>Saber más</span>
                         <i class="fas fa-arrow-right ml-2"></i>
                     </a>
                 </div>
@@ -246,8 +240,8 @@
                 </div>
 
                 <div class="card bg-white p-8 consultation-card hover-lift flex flex-col recommended-card">
-                    <div class="recommended-badge">
-                        Recomendado
+                     <div class="recommended-badge">
+                        Nuevo
                     </div>
                     <div class="flex justify-center mb-6">
                         <i class="fas fa-laptop-medical consultation-icon"></i>
@@ -620,10 +614,10 @@
 
             <hr class="my-8 border-white border-opacity-20">
 
-            <div class="text-center text-white text-opacity-60 text-sm">
+            <div class="text-center text-white text-opacity-60 text-xs sm:text-sm">
                 <p>© <span id="current-year"></span> Dra. Hanoi Yánez González. Todos los derechos reservados.</p>
                 <p class="mt-2">Centro Médico El Valle, Planta Baja, Consultorio 5, Av. Rafael Tovar, El Valle Del Espíritu Santo, Nueva Esparta, Venezuela</p>
-                </div>
+            </div>
         </div>
     </footer>
 
