--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
 
                         <div class="contact-info-item">
                             <h4 class="info-title"><i class="fas fa-map-marker-alt info-icon"></i>Ubicación</h4>
-                            <p class="info-text">
+                            <p class="info-text text-xs sm:text-base">
                                 Centro Médico El Valle, Planta Baja, Consultorio 5<br>
                                 Av. Rafael Tovar, El Valle Del Espíritu Santo<br>
                                 Nueva Esparta, Venezuela 6308
