--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+)">
+```html
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -21,7 +23,7 @@
                 <img src="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/logo.png" alt="Logo Dra. Hanoi" class="h-12 md:h-16 mr-3" onerror="this.src='https://placehold.co/64x64/d8bfd8/4b0082?text=Logo'; this.onerror=null;">
                 <div>
                     <h1 class="text-lg md:text-xl font-semibold text-gray-800">Dra. Hanoi Yánez González</h1>
-                    <p class="text-xs md:text-sm text-gray-600">Ginecóloga-Obstetra | Especialista Infanto-Juvenil</p>
+                    <p class="text-xs md:text-sm text-gray-600">Ginecóloga-Obstetra |<br>Especialista Infanto-Juvenil</p>
                 </div>
             </div>
             <div class="hidden md:flex items-center space-x-6 lg:space-x-8">
@@ -479,10 +481,11 @@
 
                         <div class="contact-info-item">
                             <h4 class="info-title"><i class="fas fa-map-marker-alt info-icon"></i>Ubicación</h4>
-                            <p class="info-text text-xs sm:text-base">
+                            <p class="info-text text-sm">
                                 Centro Médico El Valle, Planta Baja, Consultorio 5<br>
                                 Av. Rafael Tovar, El Valle Del Espíritu Santo<br>
-                                Nueva Esparta, Venezuela 6308
+                                Nueva Esparta<br>
+                                Venezuela 6308
                             </p>
                         </div>
 
@@ -614,9 +617,9 @@
 
             <hr class="my-8 border-white border-opacity-20">
 
-            <div class="text-center text-white text-opacity-60 text-xs sm:text-sm">
-                <p>© <span id="current-year"></span> Dra. Hanoi Yánez González. Todos los derechos reservados.</p>
-                <p class="mt-2">Centro Médico El Valle, Planta Baja, Consultorio 5, Av. Rafael Tovar, El Valle Del Espíritu Santo, Nueva Esparta, Venezuela</p>
+            <div class="text-center text-white text-opacity-60 text-sm">
+                <p>© <span id="current-year"></span> Dra. Hanoi Yánez González.<br>Todos los derechos reservados.</p>
+                <p class="mt-2">Centro Médico El Valle, Planta Baja, Consultorio 5<br>Av. Rafael Tovar, El Valle Del Espíritu Santo<br>Nueva Esparta<br>Venezuela 6308</p>
             </div>
         </div>
     </footer>
@@ -632,3 +635,4 @@
 
     <script src="script.js"></script> </body>
 </html>
+```
