--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-)">
-```html
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -69,7 +67,7 @@
                     Atención ginecológica integral con un enfoque holístico en todas las etapas de la vida de la mujer. Única especialista en atención infanto-juvenil en la Isla de Margarita.
                 </p>
                 <div class="flex flex-wrap gap-4 justify-center md:justify-start">
-                    <a href="#consultas" class="btn-primary smooth-scroll-link inline-flex items-center justify-center">
+                    <a href="#servicios" class="btn-primary smooth-scroll-link inline-flex items-center justify-center">
                         Conoce los Servicios
                     </a>
                     <a href="https://wa.me/584140875986" target="_blank" rel="noopener noreferrer" class="btn-secondary">
@@ -232,8 +230,7 @@
                     <div class="mt-auto">
                         <div class="consultation-price">
                             <span class="text-2xl font-bold gradient-text">$50</span>
-                            <i class="fas fa-dollar-sign currency-icon text-green-600 ml-1"></i>
-                        </div>
+                            </div>
                         <a href="https://wa.me/584140875986" target="_blank" rel="noopener noreferrer" class="btn-primary w-full flex items-center justify-center mt-4">
                             <i class="fas fa-calendar-alt mr-2"></i>
                             Agendar cita
@@ -255,8 +252,7 @@
                     <div class="mt-auto">
                          <div class="consultation-price">
                             <span class="text-2xl font-bold gradient-text">$40</span>
-                            <i class="fas fa-dollar-sign currency-icon text-green-600 ml-1"></i>
-                        </div>
+                            </div>
                         <a href="https://wa.me/584140875986" target="_blank" rel="noopener noreferrer" class="btn-primary w-full flex items-center justify-center mt-4">
                             <i class="fas fa-calendar-alt mr-2"></i>
                             Agendar cita
@@ -274,8 +270,7 @@
                     <div class="mt-auto">
                          <div class="consultation-price">
                             <span class="text-2xl font-bold gradient-text">$65</span>
-                           <i class="fas fa-dollar-sign currency-icon text-green-600 ml-1"></i>
-                        </div>
+                           </div>
                         <a href="https://wa.me/584140875986" target="_blank" rel="noopener noreferrer" class="btn-primary w-full flex items-center justify-center mt-4">
                             <i class="fas fa-calendar-alt mr-2"></i>
                             Agendar cita
@@ -482,16 +477,16 @@
                         <div class="contact-info-item">
                             <h4 class="info-title"><i class="fas fa-map-marker-alt info-icon"></i>Ubicación</h4>
                             <p class="info-text text-sm">
-                                Centro Médico El Valle, <br>
-                                Planta Baja, Consultorio 5, Av. Rafael Tovar, <br>
-                                El Valle Del Espíritu Santo<br>
-                                Nueva Esparta, Venezuela 6308
+                                Centro Médico El Valle, Planta Baja, Consultorio 5<br>
+                                Av. Rafael Tovar, El Valle Del Espíritu Santo<br>
+                                Nueva Esparta<br>
+                                Venezuela 6308
                             </p>
                         </div>
 
                         <div class="contact-info-item">
                             <h4 class="info-title"><i class="fas fa-phone-alt info-icon"></i>Teléfonos</h4>
-                            <p class="info-text">
+                            <p class="info-text text-sm">
                                 <a href="tel:+584140875986" class="contact-link">+58 414 0875986</a><br>
                                 <a href="tel:+584125305986" class="contact-link">+58 412 5305986</a>
                             </p>
@@ -499,14 +494,14 @@
 
                         <div class="contact-info-item">
                             <h4 class="info-title"><i class="fas fa-envelope info-icon"></i>Correo Electrónico</h4>
-                            <p class="info-text">
+                             <p class="info-text text-sm">
                                 <a href="mailto:yanezhanoi@gmail.com" class="contact-link">yanezhanoi@gmail.com</a>
                             </p>
                         </div>
 
                         <div class="contact-info-item">
                              <h4 class="info-title"><i class="far fa-clock info-icon"></i>Horario</h4>
-                             <p class="info-text">
+                              <p class="info-text text-sm">
                                 Lunes a viernes: 9:00 am - 6:00 pm<br> <span class="text-gray-500 text-sm">(Excepto miércoles tarde)</span><br>
                                 <span class="text-gray-500 text-sm">Sábados y domingos: No disponible</span>
                             </p>
@@ -619,7 +614,7 @@
 
             <div class="text-center text-white text-opacity-60 text-sm">
                 <p>© <span id="current-year"></span> Dra. Hanoi Yánez González.<br>Todos los derechos reservados.</p>
-                <p class="mt-2">Centro Médico El Valle, Planta Baja, Consultorio 5,<br>Av. Rafael Tovar, El Valle Del Espíritu Santo,<br>Nueva Esparta<br>Venezuela 6308</p>
+                <p class="mt-2">Centro Médico El Valle, Planta Baja, Consultorio 5<br>Av. Rafael Tovar, El Valle Del Espíritu Santo<br>Nueva Esparta<br>Venezuela 6308</p>
             </div>
         </div>
     </footer>
@@ -635,4 +630,3 @@
 
     <script src="script.js"></script> </body>
 </html>
-```
