--- a/index.html
+++ b/index.html
@@ -44,14 +44,15 @@
 
     <div id="mobile-menu" class="fixed inset-0 bg-white z-[1000] flex flex-col items-center justify-center transition-transform duration-300 ease-in-out transform translate-x-full md:hidden">
         <button id="close-menu" class="absolute top-5 right-5 text-3xl text-gray-700 hover:text-purple-600">×</button>
+        <img src="https://raw.githubusercontent.com/elsantin/dra.hanoi.online/main/images/logo.png" alt="Logo Dra. Hanoi" class="h-20 mb-12" onerror="this.src='https://placehold.co/80x80/d8bfd8/4b0082?text=Logo'; this.onerror=null;">
         <div class="flex flex-col space-y-8 text-center">
              <a href="#sobre-mi" class="mobile-nav-link smooth-scroll-link text-xl text-gray-700 hover:text-purple-600">Sobre mí</a>
             <a href="#servicios" class="mobile-nav-link smooth-scroll-link text-xl text-gray-700 hover:text-purple-600">Servicios</a>
             <a href="#consultas" class="mobile-nav-link smooth-scroll-link text-xl text-gray-700 hover:text-purple-600">Consultas</a>
             <a href="#testimonios" class="mobile-nav-link smooth-scroll-link text-xl text-gray-700 hover:text-purple-600">Testimonios</a>
-             <a href="#faq" class="mobile-nav-link smooth-scroll-link text-xl text-gray-700 hover:text-purple-600">FAQ</a>
+            <a href="#faq" class="mobile-nav-link smooth-scroll-link text-xl text-gray-700 hover:text-purple-600">FAQ</a>
             <a href="#contacto" class="mobile-nav-link smooth-scroll-link text-xl text-gray-700 hover:text-purple-600">Contacto</a>
-            <a href="https://wa.me/584140875986" target="_blank" rel="noopener noreferrer" class="btn-primary inline-block mx-auto mt-4">
+            <a href="https://wa.me/584140875986" target="_blank" rel="noopener noreferrer" class="btn-primary inline-flex items-center justify-center mx-auto mt-4">
                 <i class="fab fa-whatsapp mr-2"></i> Agendar Cita
             </a>
         </div>
